# galaxy-classification-yotta-project

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  Makefile  README.md  pyproject.toml
config/: predict.yaml  predict_webapp.yaml  train_classification.yaml
gzoo/app/: predict.py  train.py
gzoo/domain/: model.py  pipeline.py
gzoo/infra/: data.py  options.py  utils.py
gzoo/interface/: web_app.py
