[tool.poetry]
name = "gzoo"
version = "0.1.0"
description = "This project aims to classify the morphologies of distant galaxies using deep neural networks."
license = "BSD-3-Clause"
readme = "README.md"
authors = [
  "Simon Alibert <alibert.sim@gmail.com>",
  "Dan Cohen <cohen.dan1307@gmail.com>",
  "Jérémie Koster <jeremie.koster@gmail.com>",
  ]
repository = "TODO"


[tool.poetry.dependencies]
python = "~3.8"
PyYAML = "^5.4.1"
torch = "^1.8.0"
torchvision = "^0.9.0"
wandb = "^0.10.22"
pandas = "^1.2.3"
scikit-learn = "^0.24.1"
matplotlib = "^3.4.1"


[tool.poetry.dev-dependencies]
pre-commit = "^2.10.1"
safety = "^1.10.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests
)/
'''

[tool.flakehell]
format = "grouped"
max_line_length = 100
show_source = true

[tool.isort]
line_length = 100
profile = "black"
